--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter bot used to create Ethereum wallets and Ethereum transactions for Twitter users using the Omni.fyi API. ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
   "homepage": "https://github.com/AlanVegaDecentralize/Omni-Bot#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "twitter-lite": "^0.9.4"
   }
 }
