--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "twitter-lite": "^0.9.4"
+    "heroku": "^7.39.0",
+    "request": "^2.88.2",
+    "twitter-autohook": "^1.4.2",
+    "twitter-lite": "^0.9.4",
+    "util": "^0.12.2"
   }
 }
