removed twitter env, so only one env is needed

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-OMNI_URL=
-OMNI_KEY=
+ADVENTURE_URL=
+ADVENTURE_KEY=
+ADVENTURE_BEARER=
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
