--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "homepage": "https://github.com/AlanVegaDecentralize/Omni-Bot#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku": "^7.39.0",
@@ -36,8 +35,7 @@
     "request": "^2.88.2",
     "twitter-autohook": "^1.4.2",
     "twitter-lite": "^0.9.4",
-    "util": "^0.12.2",
-    "xregexp": "^4.3.0"
+    "util": "^0.12.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
